# opencaesar3

./: README.md  oc3_project_version.hpp  oc3_walker_emigrant.hpp  oc3_window_video_options.hpp
c3_rev/: C3.eng  C3_MM.eng  CMakeLists.txt  Caesar3.ini  basic.cpp  basic.h  c3.inf  cities_points.h  defs.h  gui.cpp  gui.h  house_evol.cpp  house_evol.h  log.cpp  log.h  main.cpp  mmio.cpp  mmio.h  pk.cpp  pk.h  variables.h
source/game/: pathway_helper.hpp
source/walker/: ability.hpp  animals.cpp  workerhunter.hpp
